[package]
name = "pic32probe"
description = "ICSP (2-wire) dongle for flashing PIC32 microcontrollers"
version = "0.1.0"
authors = ["Stephan <kiffie@mailbox.org>"]
license = "GPL-2.0-or-later"
edition = "2021"

[workspace]
members = [
    "system-timer",
    "usb-log",
]
exclude = ["usb-logread"]

[features]
default = ["adafruit_qt"]
adafruit_itsy = []
adafruit_qt = []

[dependencies]
cortex-m = "0.7.3"
cortex-m-rt = "0.7.0"
cfg-if = "1.0.0"
rp2040-hal = { version="0.8", features=["rt", "critical-section-impl"] }
pio = "0.2.1"
rp2040-boot2 = "0.3.0"
embedded-hal = "0.2.7"
fugit = "0.3.7"
panic-persist = { version = "0.3.0", features = ["utf8"] }
usb-log = { path = "usb-log" }
system-timer = { path = "system-timer", features = ["rp2040"] }
usb-device = { version = "0.2.8", features = ["control-buffer-256"] }
usbd-serial = "0.1.1"
heapless = "0.7.10"
byteorder = { version = "1.4.3", default-features = false }

log = "0.4.14"

[build-dependencies]
chrono = "0.4.19"

[profile.release]
#opt-level = "s"
opt-level = 2
lto = true
debug = true

[profile.dev]
opt-level = 2
lto = true
