[package]
name = "system-timer"
version = "0.1.0"
edition = "2021"
authors = ["Stephan <kiffie@mailbox.org>"]
license = "GPL-2.0-or-later"

[features]
pic32mx1xxfxxxb = ["pic32-hal/pic32mx1xxfxxxb", "pic32"]
pic32mx2xxfxxxb = ["pic32-hal/pic32mx2xxfxxxb", "pic32"]
pic32mx2x4fxxxb = ["pic32-hal/pic32mx2x4fxxxb", "pic32"]
rp2040 = ["rp2040-hal", "cortex-m", "device-selected"]
pic32 = ["mips-mcu", "device-selected"]
device-selected = []

[dependencies]
pic32-hal = { version = "0.9.0", optional = true }
mips-mcu = { version = "0.3.0", optional = true }
log = "0.4.18"

rp2040-hal = { version = "0.9", features = ["rt"], optional = true }
cortex-m = { version = "0.7.7", optional = true }
nb = "1.0.0"
void = { version = "1.0.0", default-features = false }
fugit = "0.3.7"
embedded-hal = { version = "0.2.5", features=["unproven"] }
